===================0.5.3 release===========================

2008-05-25 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc, nmv-i-debugger: 
	  Added the IDebugger::step_instruction() call to step into the
	  next machine instruction, instead of stepping into the next C
	  instruction.
	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  (DBGPerspective::on_debugger_command_done_signal): step into the
	  next machine instruction instead of over the next instruction.
	  This might help in fixing bug #534695

2008-05-25 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc:
	  (in the OnCommandDoneHandler): don't set the engine state to
	  IDebugger::READY when the command that has been DONE is
	  "detach-from-target". This should fix #534619

2008-05-18 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc: emit the
	  IDebugger::detached_from_target_signal() when the inferior program
	  exits.
	* src/persp/dbgperspective/nmv-dbg-perspective.cc:
	  (DBGPerspective::on_attached_to_target_signal (bool a_is_ready)):
	  when the debugger detaches from the inferior, update the different
	  sentivity related menu states. Also stop the throbber and the
	  busy cursor.
	  (DBGPerspective::on_program_finished_signal()): make sure to
	  notify the world that we detached from target.
	  Also make sure in this case to "de-sensitivate" the menu items
	  accessible when the debugger is connected to the target.
	  (DBGPerspective::on_debugger_state_changed_signal()): don't act
	  upon states that are different from IDebugger::READY because
	  those are notified to client code via proper signals and are thus
	  taken in account elsewhere. Don't do more work than needed.
	* src/persp/dbgperspective/nmv-memory-view.cc: 
	  (on_debugger_stopped): don't try to query the debugger when we
	  it the inferior is exiting. This leads to further errors and
	  and will later change the state of the debugger, likely bringing